option(enable_World_ConveyorBelt "Enable Module ConveyorBeltWorld" ON)
if (enable_World_ConveyorBelt)
  register_module(World ConveyorBelt)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ConveyorBeltWorld.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ConveyorBeltWorld.h)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ConveyorBelt.cpp)
  target_sources(${EXE} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ConveyorBelt.h)
  find_package(Threads)
  target_link_libraries(${EXE} ${CMAKE_THREAD_LIBS_INIT})
endif()
